# mea-dashboard

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/: alarms.py  analysis.py  readings.py  router.py  runs.py
backend/app/core/: constants.py  exceptions.py
backend/app/models/: __init__.py  alarm.py  reading.py  run.py
backend/app/schemas/: alarm.py  analysis.py  reading.py  run.py
backend/app/services/: alarm_checker.py  csv_parser.py  meapy_bridge.py  runs_service.py
backend/app/utils/: pagination.py
backend/sample_data/: alarm_scenario.csv  malformed.csv  normal_operation.csv
backend/tests/: conftest.py  test_alarm_checker.py  test_analysis_api.py  test_csv_parser.py  test_readings_api.py  test_runs_api.py
frontend/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: StatusBadge.test.tsx  dashboardStore.test.ts  formatters.test.ts
frontend/src/api/: alarms.ts  analysis.ts  client.ts  readings.ts  runs.ts
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/pages/: AlarmHistoryPage.tsx  AnalysisPage.tsx  DashboardPage.tsx  RunsListPage.tsx
frontend/src/stores/: dashboardStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
(+20 files in other folders)
