[project]
name = "mea-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the MEA pilot plant monitoring dashboard."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "meapy @ git+https://github.com/defnalk/meapy.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "factory-boy>=3.3",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
# B008: FastAPI dependency-injection idiom uses Depends/Query/File in defaults.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
